--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Alex O'Callaghan</title>
+</head>
 <body>
-<h1>Hi</h1>
-<p>Test page</p>
+<header>
+<h1>Alex O'Callaghan</h1>
+</header>
+<h2>About</h2>
+<p>I'm a undergraduate studying Computer Science at Southampton University.</p>
+<h2>Projects</h2>
+<ul>
+<li><a href="http://www.footyfeeds.net" target="blank">FootyFeeds</a> - Aggregator of football news articles using RSS feeds</li>
+<li><a href="http://www.alexocallaghan.com/crime" target="blank">Crime map of London</a> - Map of crime in London in 2013 using open data from data.police.uk and Google Maps API</li>
+</ul>
 </body>
 </html>
