--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
 <head>
 <title>Alex O'Callaghan</title>
+<style>
+* { margin: 0 auto; }
+.container { width: 960px; }
+header { height: 50px; line-height: 50px; background: #287CB0; }
+h1 { color: #FFF; }
+h2 { padding: 10px; border-bottom: 1px solid grey; }
+p { padding: 5px; }
 </head>
 <body>
 <header>
+<div class="container">
 <h1>Alex O'Callaghan</h1>
+</div>
 </header>
+<div class="container">
 <h2>About</h2>
 <p>I'm a undergraduate studying Computer Science at Southampton University.</p>
 <h2>Projects</h2>
@@ -14,5 +24,6 @@
 <li><a href="http://www.footyfeeds.net" target="blank">FootyFeeds</a> - Aggregator of football news articles using RSS feeds</li>
 <li><a href="http://www.alexocallaghan.com/crime" target="blank">Crime map of London</a> - Map of crime in London in 2013 using open data from data.police.uk and Google Maps API</li>
 </ul>
+</div>
 </body>
 </html>
