Update index.html added css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ header { height: 50px; line-height: 50px; background: #287CB0; }
 h1 { color: #FFF; }
 h2 { padding: 10px; border-bottom: 1px solid grey; }
 p { padding: 5px; }
+</style>
 </head>
 <body>
 <header>
