Update index.html with example-express project

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ p { padding: 5px; }
 <h2>Projects</h2>
 <ul>
 <li><a href="http://www.footyfeeds.net" target="blank">FootyFeeds</a> - Aggregator of football news articles using RSS feeds</li>
+<li><a href="https://github.com/awocallaghan/example-express" target="_blank">Node/Express web server</a> - Example express website with folder structure</li>
 <li><a href="http://www.alexocallaghan.com/crime" target="blank">Crime map of London</a> - Map of crime in London in 2013 using open data from data.police.uk and Google Maps API</li>
 </ul>
 </div>
