--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hi</h1>
-<p>Test page</p>
-</body>
-</html>
+---
+layout: default.html
+title: Alex O'Callaghan
+---
+
+<div id="content" class="container">
+	<h2>Blog posts</h2>
+	<ul class="posts">
+		{% for post in site.posts %}
+			<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		{% endfor %}
+	</ul>
+</div>
