.container class added to #content on projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Projects - Alex O'Callaghan
 ---
-<div id="content" class="content">
+<div id="content" class="container">
 	<h2>Projects</h2>
 	<ul>
 		<li><a href="http://footyfeeds.net" target="_blank">FootyFeeds</a> - FootyFeeds is a football news aggregator created using NodeJS/AngularJS and uses a postgreSQL database</li>
