--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 title: Alex O'Callaghan
 ---
+<div class="jumbotron">
+	<div class="container">
+		<h1>Welcome to my personal website!</h1>
+		<p>Have a look at interesting things I've made</p>
+		<p><a class="btn btn-primary btn-lg" href="http://twitter.com/alexocallaghan" target="_blank" role="button">Contact me</a></p>
+	</div>
+</div>
 
 <div id="content" class="container">
 	<h2>Blog posts</h2>
