Added meta keywords and description to each page

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: About - Alex O'Callaghan
+keywords: about me,alex o'callaghan,web development,front end developer,javascript,html,css
+description: Learn more about me and my web development experiences.
 ---
 <div id="content" class="container">
 	<h2>About</h2>
