--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Alex O'Callaghan
+keywords: alex o'callaghan,computer science,web design,web development,front end development,html,css,php,java,javascript,nodejs,express,angularjs,postgresql,programmer,portfolio
+description: Personal website of Alex O'Callaghan, Computer Science undergraduate at University of Southampton. Read about my programming work, focusing especially on front-end development
 ---
 <div class="jumbotron">
 	<div class="container">
