--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Projects - Alex O'Callaghan
+keywords: alex o'callaghan,projects,web development projects,html,websites,nodejs,angular,css,portfolio
+description: Check out the web development projects I have been working on using HTML, CSS, PHP, Nodejs, AngularJS and more
 ---
 <div id="content" class="container">
 	<h2>Projects</h2>
