--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Alex O'Callaghan
 keywords: alex o'callaghan,computer science,web design,web development,front end development,html,css,php,java,javascript,nodejs,express,angularjs,postgresql,programmer,portfolio
-description: Personal website of Alex O'Callaghan, Computer Science undergraduate at University of Southampton. Read about my programming work, focusing especially on front-end development
+description: Personal website of Alex O'Callaghan, Computer Science undergraduate at University of Southampton
 ---
 <div id="top" class="jumbotron">
 	<div class="container">
@@ -20,12 +20,12 @@ description: Personal website of Alex O'Callaghan, Computer Science undergraduat
 	<p>My name is Alex O'Callaghan and I am a Computer Science undegraduate studying at <a href="http://www.southampton.ac.uk" target="_blank">University of Southampton</a>. I love making websites and useful tools that help people. I use HTML, CSS and JavaScript (jQuery, Nodejs and AngularJS) to create beautiful websites and I am also experienced with Java (the language of choice in my Computer Science course).</p>
 	<p>You can find me on Twitter: <a href="http://twitter.com/alexocallaghan" target="_blank">@alexocallaghan</a>,</p>
 	<p>have a look at some of my code on GitHub: <a href="https://github.com/awocallaghan" target="_blank">awocallaghan on GitHub</a>,</p>
-	<p>and I'm also on LinkedIn: <a href="uk.linkedin.com/in/awocallaghan" target="_blank">Alex O'Callaghan on LinkedIn</a></p>
+	<p>and I'm also on LinkedIn: <a href="http://uk.linkedin.com/in/awocallaghan" target="_blank">Alex O'Callaghan on LinkedIn</a></p>
 </div>
 
 <div id="projects" class="content-header">
 	<div class="container">
-		<h2>Projects
+		<h2>Projects</h2>
 	</div>
 </div>
 <div class="content container">
