--- a/kickups/index.html
+++ b/kickups/index.html
@@ -25,6 +25,14 @@
         preload: preload
       });
 
+      WebFontConfig = {
+        active: function () { game.time.events.add(Phaser.Timer.SECOND, createText, this); },
+
+        google : {
+          families: ['Roboto']
+        }
+      }
+
       var KickupsGame = {};
 
       KickupsGame.MainMenu = function () {};
@@ -40,6 +48,15 @@
           this.game.stage.backgroundColor = '#36AED6';
 
           //this.clouds = generateClouds(this);
+
+          // add title text
+          var style = { font: "65px Roboto", fill: "#fff", align: "center" };
+          this.titleText = this.add.text(game.world.centerX, game.world.centerY - 200, "kickups", style);
+          this.titleText.anchor.set(0.5);
+
+          var style = { font: "25px Roboto", fill: "#fff", align: "center" };
+          this.subText = this.add.text(game.world.centerX, game.world.centerY - 100, "keep the ball in the air for as long as you can", style);
+          this.subText.anchor.set(0.5);
 
           // add play button
           this.playButton = this.add.button(game.world.centerX - 200, game.world.centerY, 'button_play', this.startGame, this, 2, 1, 0);
@@ -72,8 +89,6 @@
 
           // add bottom grass to world
           var grassHeight = Math.round(height/5);
-          console.log(grassHeight);
-          console.log(height - grassHeight);
           this.grass = this.add.tileSprite(game.world.centerX, height - Math.round(grassHeight/2), width, grassHeight, "grass");
           this.game.physics.p2.enable(this.grass);
           this.grass.body.static = true;
@@ -92,18 +107,18 @@
 
 
           // big instruction text
-          var style = { font: "65px Arial", fill: "#fff", align: "center"};
+          var style = { font: "65px Roboto", fill: "#fff", align: "center"};
           this.instructionText = this.add.text(game.world.centerX, game.world.centerY, "keep it up!", style);
           this.instructionText.anchor.set(0.5);
         },
         kick : function () {
           this.score++;
           if (this.input.x < this.ball.x) {
-            this.ball.body.velocity.x = 200;
-            this.ball.body.velocity.y = -200;
+            this.ball.body.velocity.x = 400;
+            this.ball.body.velocity.y = -400;
           } else {
-            this.ball.body.velocity.x = -200;
-            this.ball.body.velocity.y = -200;
+            this.ball.body.velocity.x = -400;
+            this.ball.body.velocity.y = -400;
           }
         },
         grassHit : function (body) {
@@ -119,7 +134,7 @@
           if (this.scoreText != null) {
             this.scoreText.destroy();
           }
-          var style = { font : "14px Arial", fill: "#fff", align: "center" };
+          var style = { font : "14px Roboto", fill: "#fff", align: "center" };
           this.scoreText = this.add.text(game.world.centerX, 50, "Score: " + this.score + ", Highscore: " + game.highScore, style);
           this.scoreText.anchor.set(0.5);
         }
@@ -129,6 +144,9 @@
        * Add game states and start initial state
        */
       function preload() {
+        // load Google WebFont loader script
+        game.load.script('webfont', '//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js');
+
         game.highScore = 0;
 
         // Add states to game
