Added rss-combiner project, added to about page

--- a/about.html
+++ b/about.html
@@ -5,4 +5,71 @@ description: "A bit about myself"
 header-img: "img/home-bg.jpg"
 ---
 
-<p>My name is Alex O'Callaghan and I'm currently studying Computer Science at Southampton University. This is my personal website created to publish blog posts and projects as I develop my programming skills and create new tools.</p>
+<h3>About me</h3>
+
+<p>
+  My name is Alex O'Callaghan and I'm currently studying Computer Science at
+  Southampton University. This is my personal website created to publish blog
+  posts and projects as I develop my programming skills and create new tools.
+</p>
+
+<p>
+  I'm interested in all areas of software development with a particular interest
+  in web development. My University degree has given me a strong understanding of
+  <strong>Object Orientated Programming</strong> using <strong>Java</strong> and
+  exposed me to <strong>Functional Programming Languages</strong> such as
+  <strong>Scheme</strong> and <strong>OCaml</strong>. Furthermore I have a firm
+  grasp of fundamental Computer Science concepts such as algorithmic complexity,
+  computability and data structures.
+</p>
+
+<p>
+  In my free time I have delved into web development experimenting with
+  <strong>JavaScript</strong> frameworks such as <strong>jQuery</strong>,
+  <strong>Angular</strong>, <strong>React</strong> and <strong>Express</strong>.
+  I've created
+  <a href="https://www.npmjs.com/~awocallaghan" target="_blank">npm packages</a>
+  contributing to the open source JavaScript community and familiarised myself
+  with best practices and useful build tools such as <strong>Gulp</strong>,
+  <strong>Grunt</strong>, <strong>Webpack</strong>, <strong>Browserify</strong>, etc.
+  I've also used <strong>Cordova</strong> and
+  <strong>Ionic</strong> to create a
+  <a href="https://github.com/awocallaghan/todo-ionic" target="_blank">cross-platform smartphone application</a>.
+</p>
+
+<p>
+  I have a strong understanding of <strong>HTML5</strong> and <strong>CSS3</strong>.
+  I've used CSS preprocessors such as <strong>SASS</strong> and <strong>LESS</strong>
+  and popular frameworks such as <strong>Bootstrap</strong> and <strong>Foundation</strong>
+  to create responsive websites. I've completed freelance web development work
+  designing and implementing professional websites to clients' requirements.
+  I've employed the iterative Agile software development methodology of conducting
+  scrums and sprints to burn through the project backlog. Furthermore, I understand
+  the importance of following <strong>Test Driven Development (TDD)</strong>
+  and <strong>Behaviour Driven Development (BDD)</strong> to ensure a project
+  meets all functional and user experience requirements.
+</p>
+
+<h3>FootyFeeds project</h3>
+
+<p>
+  I created a football news aggregator called
+  <a href="http://footyfeeds.co.uk" target="_blank">FootyFeeds</a>
+  to provide an effective and efficient method for football fans to get all the
+  latest headlines relating to their team. I created the backend using a
+  <strong>PostgreSQL</strong> database to store the news data and an
+  <strong>Express</strong> webserver to provide a <strong>RESTful API</strong>
+  and to regularly gather news articles from <strong>RSS feeds</strong>.
+  The frontend is an <strong>Angular</strong> single page application which
+  allows users to register an account, filter news by their favourite team,
+  and filter which RSS sources are displayed. The Angular app is open source and
+  you can get the code on
+  <a href="https://github.com/awocallaghan/footyfeeds-angular" target="_blank">GitHub</a>.
+  I also created social media accounts to help promote the website:
+  <a href="https://twitter.com/footyfeeds" target="_blank">Twitter</a>,
+  <a href="https://facebook.com/footyfeeds" target="_blank">Facebook</a>, and
+  <a href="https://google.com/+footyfeedsnet" target="_blank">Google+</a>.
+  I also used <strong>Google Analytics</strong> to track visitor activity and
+  researched <strong>Search Engine Optimisation (SEO)</strong> techniques
+  ensuring the address was registered with Google, Bing, Yahoo, etc.
+</p>
