Fixed button links underlined

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@ description: "Computer Science undergraduate"
 <p>
   I am Alex O'Callaghan and this is my personal website where I share blog posts and recent projects I have completed. I am a software developer focusing on full stack web development completing a BSc Computer Science at <a href="https://southampton.ac.uk" target="_blank">University of Southampton</a>.
 </p>
-<p>
-  <a class="btn btn-secondary m-x-2" href="/about">More info</a>
-  <a class="btn btn-primary m-x-2" href="/projects">Browse project portfolio</a>
-</p>
+<div class="row">
+  <div class="col">
+    <a class="btn btn-secondary m-x-2" href="/about">More info</a>
+  </div>
+  <div class="col">
+    <a class="btn btn-primary m-x-2" href="/projects">Browse project portfolio</a>
+  </div>
+</div>
 
 <hr />
 
