General fixes/changes

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@ description: "Computer Science undergraduate"
 <p>
   I am Alex O'Callaghan and this is my personal website where I share blog posts and recent projects I have completed. I am a software developer focusing on full stack web development completing a BSc Computer Science at <a href="https://southampton.ac.uk" target="_blank">University of Southampton</a>.
 </p>
-<div class="row">
-  <div class="col">
-    <a class="btn btn-secondary m-x-2" href="/about">More info</a>
+<div class="row justify-content-center justify-content-md-between">
+  <div class="col-xs-4">
+    <a class="btn btn-secondary mx-2 my-2" href="/about">More about me</a>
   </div>
-  <div class="col">
-    <a class="btn btn-primary m-x-2" href="/projects">Browse project portfolio</a>
+  <div class="col-xs-4">
+    <a class="btn btn-primary mx-2 my-2" href="/projects">Browse project portfolio</a>
   </div>
 </div>
 
 <hr />
-
-<h2>Blog posts</h2>
-{% include posts.html %}
