Template restructuring, new header images, added Google PageSpeed blog pos

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "A bit about myself"
-header-img: "img/home-bg.jpg"
+header-img: "img/wood-coffee-iphone-notebook.jpg"
 ---
 
 <h3>About me</h3>
