--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Thank you for getting in touch!"
 description: "Message received"
-header-img: "img/home-bg.jpg"
+header-img: "img/london-skyline.jpeg"
 ---
 
 <div class="alert alert-success">
