--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 layout: page
 title: "Contact"
 description: "Get in touch"
-header-img: "img/home-bg.jpg"
+header-img: "img/london-skyline.jpeg"
 ---
 
-<p>Get in touch with me using the following form:</p>
+<p>You can send me an email using the form below and I'll respond ASAP</p>
 
 <form name="sentMessage" id="contactForm" novalidate class="justify-content-center" method="post" action="https://formspree.io/aocallaghan@outlook.com">
   <div class="form-group col-xs-12 floating-label-form-group controls">
