--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Projects"
 description: "Cool stuff I've made"
-header-img: "img/home-bg.jpg"
+header-img: "img/computer-motherboard-pc-wires.jpg"
 scripts: "/js/projects.min.js"
 ---
 
