--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@ layout: page
 description: "Computer Science undergraduate"
 ---
 
-<h2>About me</h2>
-<p>
-  I am Alex O'Callaghan and this is my personal website where I share blog posts and recent projects I have completed. I am a software developer focusing on full stack web development completing a BSc Computer Science at <a href="https://southampton.ac.uk" target="_blank">University of Southampton</a>.
-</p>
-<div class="row justify-content-center justify-content-md-between">
-  <div class="col-xs-4">
-    <a class="btn btn-secondary mx-2 my-2" href="/about">More about me</a>
+<div id="home-content">
+  <h2>About me</h2>
+  <p>
+    I am Alex O'Callaghan and this is my personal website where I share blog posts and recent projects I have completed. I am a software developer focusing on full stack web development completing a BSc Computer Science at <a href="https://southampton.ac.uk" target="_blank">University of Southampton</a>.
+  </p>
+  <div class="row justify-content-center justify-content-md-between">
+    <div class="col-xs-4">
+      <a class="btn btn-secondary mx-2 my-2" href="/about">More about me</a>
+    </div>
+    <div class="col-xs-4">
+      <a class="btn btn-primary mx-2 my-2" href="/projects">Browse project portfolio</a>
+    </div>
   </div>
-  <div class="col-xs-4">
-    <a class="btn btn-primary mx-2 my-2" href="/projects">Browse project portfolio</a>
+  <hr />
+  <h2>
+    Recent blog posts
+    <a target="_blank" href="/feed.xml">
+      <i class="fa fa-rss pull-right"></i>
+    </a>
+  </h2>
+  {% assign small = true %}
+  {% include post/posts.html %}
+  <div class="row justify-content-center">
+    <a class="btn btn-secondary" href="/blog">More posts</a>
   </div>
 </div>
-
-<hr />
