Updated about page, added final yr project

--- a/about.html
+++ b/about.html
@@ -4,48 +4,58 @@ title: "About"
 description: "A bit about myself"
 header-img: "img/wood-coffee-iphone-notebook.jpg"
 ---
-
-<h3>About me</h3>
-
-<p>
-  My name is Alex O'Callaghan and I'm currently studying Computer Science at
-  Southampton University. This is my personal website created to publish blog
-  posts and projects as I develop my programming skills and create new tools.
-</p>
-
-<p>
-  I'm interested in all areas of software development with a particular interest
-  in web development. My University degree has given me a strong understanding of
-  <strong>Object Orientated Programming</strong> using <strong>Java</strong> and
-  exposed me to <strong>Functional Programming Languages</strong> such as
-  <strong>Scheme</strong> and <strong>OCaml</strong>. Furthermore I have a firm
-  grasp of fundamental Computer Science concepts such as algorithmic complexity,
-  computability and data structures.
-</p>
-
-<p>
-  In my free time I have delved into web development experimenting with
-  <strong>JavaScript</strong> frameworks such as <strong>jQuery</strong>,
-  <strong>Angular</strong>, <strong>React</strong> and <strong>Express</strong>.
-  I've created
-  <a href="https://www.npmjs.com/~awocallaghan" target="_blank">npm packages</a>
-  contributing to the open source JavaScript community and familiarised myself
-  with best practices and useful build tools such as <strong>Gulp</strong>,
-  <strong>Grunt</strong>, <strong>Webpack</strong>, <strong>Browserify</strong>, etc.
-  I've also used <strong>Cordova</strong> and
-  <strong>Ionic</strong> to create a
-  <a href="https://github.com/awocallaghan/todo-ionic" target="_blank">cross-platform smartphone application</a>.
-</p>
-
-<p>
-  I have a strong understanding of <strong>HTML5</strong> and <strong>CSS3</strong>.
-  I've used CSS preprocessors such as <strong>SASS</strong> and <strong>LESS</strong>
-  and popular frameworks such as <strong>Bootstrap</strong> and <strong>Foundation</strong>
-  to create responsive websites. I've completed freelance web development work
-  designing and implementing professional websites to clients' requirements.
-  I've employed the iterative Agile software development methodology of conducting
-  scrums and sprints to burn through the project backlog. Furthermore, I understand
-  the importance of following <strong>Test Driven Development (TDD)</strong>
-  and <strong>Behaviour Driven Development (BDD)</strong> to ensure a project
-  meets all functional and user experience requirements.
-</p>
+<div class="row">
+  <div class="col-12 col-md-8">
+    <h3>About me</h3>
+    <p>
+      My name is Alex O'Callaghan and I'm currently studying Computer Science at
+      Southampton University. This is my personal website created to publish blog
+      posts and projects as I develop my programming skills and create new tools.
+    </p>
+    <p>
+      I'm interested in all areas of software development with a particular interest
+      in web development. My University degree has given me a strong understanding of
+      <strong>Object Orientated Programming</strong> using <strong>Java</strong> and
+      exposed me to <strong>Functional Programming Languages</strong> such as
+      <strong>Scheme</strong> and <strong>OCaml</strong>. Furthermore I have a firm
+      grasp of fundamental Computer Science concepts such as algorithmic complexity,
+      computability and data structures.
+    </p>
+    <p>
+      In my free time I have delved into web development experimenting with
+      <strong>JavaScript</strong> frameworks such as <strong>jQuery</strong>,
+      <strong>Angular</strong>, <strong>React</strong> and <strong>Express</strong>.
+      I've created
+      <a href="https://www.npmjs.com/~awocallaghan" target="_blank">npm packages</a>
+      contributing to the open source JavaScript community and familiarised myself
+      with best practices and useful build tools such as <strong>Gulp</strong>,
+      <strong>Grunt</strong>, <strong>Webpack</strong>, <strong>Browserify</strong>, etc. In addition, I'm experienced with a range of server-side languages including JavaScript (Node.js), PHP (Laravel, WordPress), Java (Spring), and C# (ASP.NET).
+    </p>
+    <p>
+      I have a strong understanding of <strong>HTML5</strong> and <strong>CSS3</strong>.
+      I've used CSS preprocessors such as <strong>SASS</strong> and <strong>LESS</strong>
+      and popular frameworks such as <strong>Bootstrap</strong> and <strong>Foundation</strong>
+      to create responsive websites. I've completed freelance web development work
+      designing and implementing professional websites to clients' requirements.
+      I've employed the iterative Agile software development methodology of conducting
+      scrums and sprints to burn through the project backlog. Furthermore, I understand
+      the importance of following <strong>Test Driven Development (TDD)</strong>
+      and <strong>Behaviour Driven Development (BDD)</strong> to ensure a project
+      meets all functional and user experience requirements.
+    </p>
+  </div>
+  <div class="col-12 col-md-4">
+    <h3>Education</h3>
+    <ul>
+      <li><em>2007-2012</em> &mdash; Queensmead High School &mdash; GCSEs incl. Maths &amp; English</li>
+      <li><em>2012-2014</em> &mdash; Queensmead High School (Sixth Form) &mdash; A-Levels: Maths (A), Further Maths (A), Computing (A); AS-Levels: Physics (B), Extended Project Qualification (A)</li>
+      <li><em>2014-2017</em> &mdash; University of Southampton &mdash; BSc. Computer Science</li>
+    </ul>
+    <hr />
+    <h3>Links</h3>
+    <ul>
+      <li><a href="https://github.com/awocallaghan" target="_blank">awocallaghan on GitHub</a></li>
+      <li><a href="https://www.npmjs.com/~awocallaghan" target="_blank">awocallaghan on npm</a></li>
+    </ul>
+  </div>
+</div>
