Refactored LESS, active nav item, mobile post preview

--- a/about.html
+++ b/about.html
@@ -3,33 +3,33 @@ layout: page
 title: "About"
 description: "A bit about myself"
 header-img: "img/wood-coffee-iphone-notebook.jpg"
+activePage: "about"
 ---
 <div class="row">
   <div class="col-12 col-md-8">
     <h3>About me</h3>
     <p>
-      My name is Alex O'Callaghan and I'm currently studying Computer Science at
-      Southampton University. This is my personal website created to publish blog
+      My name is Alex O'Callaghan and I'm a web developer from London, England. This is my personal website created to publish blog
       posts and projects as I develop my programming skills and create new tools.
     </p>
     <p>
       I'm interested in all areas of software development with a particular interest
-      in web development. My University degree has given me a strong understanding of
+      in web development. I completed <em>BSc Computer Science</em> at the <a href="https://southampton.ac.uk" target="_blank">University of Southampton</a> giving me a strong understanding of
       <strong>Object Orientated Programming</strong> using <strong>Java</strong> and
       exposed me to <strong>Functional Programming Languages</strong> such as
       <strong>Scheme</strong> and <strong>OCaml</strong>. Furthermore I have a firm
       grasp of fundamental Computer Science concepts such as algorithmic complexity,
-      computability and data structures.
+      computability and data structures. For my final year project I designed and implemented a video analytics web application for university lecturers using <strong>Vue.js</strong> + <strong>Data-Driven Documents (D3)</strong>, <strong>Express</strong>, and <strong>RethinkDB</strong>.
     </p>
     <p>
       In my free time I have delved into web development experimenting with
-      <strong>JavaScript</strong> frameworks such as <strong>jQuery</strong>,
-      <strong>Angular</strong>, <strong>React</strong> and <strong>Express</strong>.
+      <strong>JavaScript</strong> front end frameworks such as <strong>jQuery</strong>,
+      <strong>Angular</strong>, <strong>React</strong> and <strong>Vue.js</strong>.
       I've created
       <a href="https://www.npmjs.com/~awocallaghan" target="_blank">npm packages</a>
       contributing to the open source JavaScript community and familiarised myself
       with best practices and useful build tools such as <strong>Gulp</strong>,
-      <strong>Grunt</strong>, <strong>Webpack</strong>, <strong>Browserify</strong>, etc. In addition, I'm experienced with a range of server-side languages including JavaScript (Node.js), PHP (Laravel, WordPress), Java (Spring), and C# (ASP.NET).
+      <strong>Grunt</strong>, <strong>Webpack</strong>,  and <strong>Browserify</strong>. In addition, I'm experienced with a range of server-side languages including <strong>JavaScript (Node.js)</strong>, <strong>PHP (Laravel, WordPress)</strong>, <strong>Java (Spring)</strong>, and <strong>C# (ASP.NET)</strong>.
     </p>
     <p>
       I have a strong understanding of <strong>HTML5</strong> and <strong>CSS3</strong>.
@@ -38,7 +38,7 @@ header-img: "img/wood-coffee-iphone-notebook.jpg"
       to create responsive websites. I've completed freelance web development work
       designing and implementing professional websites to clients' requirements.
       I've employed the iterative Agile software development methodology of conducting
-      scrums and sprints to burn through the project backlog. Furthermore, I understand
+      scrums and sprints to burn through the project backlog when working as a software development team. Furthermore, I understand
       the importance of following <strong>Test Driven Development (TDD)</strong>
       and <strong>Behaviour Driven Development (BDD)</strong> to ensure a project
       meets all functional and user experience requirements.
@@ -47,9 +47,9 @@ header-img: "img/wood-coffee-iphone-notebook.jpg"
   <div class="col-12 col-md-4">
     <h3>Education</h3>
     <ul>
-      <li><em>2007-2012</em> &mdash; Queensmead High School &mdash; GCSEs incl. Maths &amp; English</li>
-      <li><em>2012-2014</em> &mdash; Queensmead High School (Sixth Form) &mdash; A-Levels: Maths (A), Further Maths (A), Computing (A); AS-Levels: Physics (B), Extended Project Qualification (A)</li>
       <li><em>2014-2017</em> &mdash; University of Southampton &mdash; BSc. Computer Science</li>
+      <li><em>2012-2014</em> &mdash; Queensmead High School (Sixth Form) &mdash; A-Levels: Maths (A), Further Maths (A), Computing (A); AS-Levels: Physics (B), Extended Project Qualification (A)</li>
+      <li><em>2007-2012</em> &mdash; Queensmead High School &mdash; GCSEs incl. Maths &amp; English</li>
     </ul>
     <hr />
     <h3>Links</h3>
