--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@ layout: page
 title: "Blog"
 description: "Recent blog posts"
 header-img: img/library.jpeg
+activePage: "blog"
 ---
 
 {% include post/posts.html %}
