--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@ layout: page
 title: "Contact"
 description: "Get in touch"
 header-img: "img/london-skyline.jpeg"
+activePage: "contact"
 ---
 
 <p>You can send me an email using the form below and I'll respond ASAP</p>
