--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@ title: "Projects"
 description: "Cool stuff I've made"
 header-img: "img/computer-motherboard-pc-wires.jpg"
 scripts: "/js/projects.min.js"
+activePage: "projects"
 ---
 
 <p>
