--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -3,6 +3,7 @@ layout: page
 title: "Thank you for getting in touch!"
 description: "Message received"
 header-img: "img/london-skyline.jpeg"
+activePage: "contact"
 ---
 
 <div class="alert alert-success">
