Updated project filters, added ascesis and seg projects

--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Thank you for getting in touch!"
 description: "Message received"
-header-img: "img/london-skyline.jpeg"
+header-img: "/img/london-skyline.jpeg"
 activePage: "contact"
 ---
 
