--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,9 @@
 layout: page
 title: "Blog"
 description: "Recent blog posts"
-header-img: img/library.jpeg
+header-img: /img/library.jpeg
 activePage: "blog"
 ---
+
 
 {% include post/posts.html %}
