--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Contact"
 description: "Get in touch"
-header-img: "img/london-skyline.jpeg"
+header-img: "/img/london-skyline.jpeg"
 activePage: "contact"
 ---
 
@@ -35,7 +35,7 @@ activePage: "contact"
   <div id="success"></div>
   <div class="row justify-content-center">
     <div class="form-group col-xs-12">
-      <button type="submit" class="btn btn-default">Send</button>
+      <button type="submit" role="button" class="btn btn-default">Send</button>
     </div>
   </div>
 </form>
