Updated about page

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ activePage: "about"
       <a href="https://www.npmjs.com/~awocallaghan" target="_blank">npm packages</a>
       contributing to the open source JavaScript community and familiarised myself
       with best practices and useful build tools such as <strong>Gulp</strong>,
-      <strong>Grunt</strong>, <strong>Webpack</strong>,  and <strong>Browserify</strong>. In addition, I'm experienced with a range of server-side languages including <strong>JavaScript (Node.js)</strong>, <strong>PHP (Laravel, WordPress)</strong>, <strong>Java (Spring)</strong>, and <strong>C# (ASP.NET)</strong>.
+      <strong>Grunt</strong>, <strong>Webpack</strong>,  and <strong>Browserify</strong>. I've also got experience working with a range of server-side languages including <strong>JavaScript (Node.js)</strong>, <strong>PHP (Laravel, WordPress)</strong>, <strong>Java (Spring)</strong>.
     </p>
     <p>
       I have a strong understanding of <strong>HTML5</strong> and <strong>CSS3</strong>.
