--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Computer Science undergraduate"
+description: "Full stack web developer"
 activePage: "index"
 ---
 
@@ -9,7 +9,7 @@ activePage: "index"
   <p>
     I am Alex O'Callaghan and this is my personal website where I share blog posts and recent projects I have completed. I am a software developer focusing on full stack web development completing a BSc Computer Science at <a href="https://southampton.ac.uk" target="_blank">University of Southampton</a>.
   </p>
-  <div class="row justify-content-center justify-content-md-between">
+  <div class="row justify-content-center">
     <div class="col-xs-4">
       <a class="btn btn-secondary mx-2 my-2" href="/about">More about me</a>
     </div>
