--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@ activePage: "index"
   </div>
   <hr />
   <h2>
+    Projects
+    <a href="/projects">
+      <i class="fa fa-plus pull-right"></i>
+    </a>
+  </h2>
+  {% assign type = 'featured' %}
+  {% assign count = 3 %}
+  {% include project/projects.html %}
+  <div class="row justify-content-center my-4">
+    <a class="btn btn-secondary" href="/projects">More projects</a>
+  </div>
+  <hr />
+  <h2>
     Recent blog posts
     <a target="_blank" href="/feed.xml">
       <i class="fa fa-rss pull-right"></i>
@@ -26,7 +39,7 @@ activePage: "index"
   </h2>
   {% assign small = true %}
   {% include post/posts.html %}
-  <div class="row justify-content-center">
+  <div class="row justify-content-center my-4">
     <a class="btn btn-secondary" href="/blog">More posts</a>
   </div>
 </div>
