Image optimizations + uglify cssrelpreload polyfill

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 description: "Full stack web developer"
+metaDescription: "Personal website of software developer Alex O'Callaghan focusing on web development"
 activePage: "index"
 splashHeader: true
 ---
