--- a/html/project-filters.html
+++ b/html/project-filters.html
@@ -34,8 +34,8 @@
       </div>
     </div>
     <div class="col-12">
-      <button class="btn btn-primary" role="submit">Update</button>
-      <a class="btn btn-secondary" onclick="resetFilters()" href="#projects-filters">Reset</a>
+      <button class="btn btn-primary mx-2" role="submit">Update</button>
+      <a class="btn btn-secondary mx-2" onclick="resetFilters()" href="#projects-filters">Reset</a>
     </div>
   </form>
 </div>
